# docassemble-VTSmallClaimsCertificateOfService

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/VTSmallClaimsCertificateOfService/data/questions/: small_claims_certificate_of_service.yml
